--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-tailwindcss",
+  "name": "fernandluke.com",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby and Tailwind",
+  "description": "Website for #flukefest.",
   "version": "0.1.0",
   "author": "Luke Bennett <hello@lukebennett.com.au>",
   "dependencies": {
@@ -22,6 +22,7 @@
     "postcss-import": "^12.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "tailwindcss": "^1.1.2"
@@ -31,15 +32,11 @@
   },
   "license": "MIT",
   "scripts": {
-    "analyze": "npm run analyze:lint && npm run analyze:prettier",
-    "analyze:lint": "eslint --ext .jsx --ext .js .",
-    "analyze:prettier": "prettier --list-different '**/*.{js,css,md,json}'",
     "build": "gatsby build",
     "build:serve": "npm run build && npm run serve",
     "develop": "gatsby develop --open",
-    "fix": "npm run fix:lint && npm run fix:prettier",
-    "fix:lint": "eslint --ext .jsx --ext .js . --fix",
-    "fix:prettier": "prettier --write '**/*.{js,css,md,json}'",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "start": "npm run develop",
     "serve": "gatsby serve --open"
   }
