--- a/package.json
+++ b/package.json
@@ -5,30 +5,30 @@
   "version": "0.1.0",
   "author": "Luke Bennett <hello@lukebennett.com.au>",
   "dependencies": {
-    "autoprefixer": "^9.6.1",
-    "gatsby": "^2.15.1",
-    "gatsby-image": "^2.2.15",
-    "gatsby-plugin-canonical-urls": "^2.1.5",
-    "gatsby-plugin-manifest": "^2.2.12",
-    "gatsby-plugin-netlify": "^2.1.10",
-    "gatsby-plugin-postcss": "^2.1.5",
+    "autoprefixer": "^9.7.3",
+    "gatsby": "^2.18.17",
+    "gatsby-image": "^2.2.37",
+    "gatsby-plugin-canonical-urls": "^2.1.18",
+    "gatsby-plugin-manifest": "^2.2.34",
+    "gatsby-plugin-netlify": "^2.1.30",
+    "gatsby-plugin-postcss": "^2.1.18",
     "gatsby-plugin-purgecss": "^4.0.1",
-    "gatsby-plugin-react-helmet": "^3.1.5",
+    "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-robots-txt": "^1.5.0",
-    "gatsby-plugin-sharp": "^2.2.18",
-    "gatsby-plugin-sitemap": "^2.2.9",
-    "gatsby-source-filesystem": "^2.1.9",
-    "gatsby-transformer-sharp": "^2.2.6",
+    "gatsby-plugin-sharp": "^2.3.10",
+    "gatsby-plugin-sitemap": "^2.2.24",
+    "gatsby-source-filesystem": "^2.1.43",
+    "gatsby-transformer-sharp": "^2.3.9",
     "postcss-import": "^12.0.1",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
+    "react": "16.12.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^16.9.0",
+    "react-dom": "16.12.0",
     "react-helmet": "^5.2.1",
-    "tailwindcss": "^1.1.2"
+    "tailwindcss": "^1.1.4"
   },
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "prettier": "^1.19.1"
   },
   "license": "MIT",
   "scripts": {
