--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "16.12.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.8.0",
+    "react-modal": "^3.11.1",
+    "react-spring": "^8.0.27",
     "tailwindcss": "^1.1.4"
   },
   "devDependencies": {
@@ -34,10 +37,10 @@
   "scripts": {
     "build": "gatsby build",
     "build:serve": "npm run build && npm run serve",
-    "develop": "gatsby develop --open",
+    "develop": "gatsby develop --host=0.0.0.0 --open",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "start": "npm run develop",
-    "serve": "gatsby serve --open"
+    "serve": "gatsby serve --host=0.0.0.0 --open"
   }
 }
