--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "tailwindcss": "^1.1.4"
   },
   "devDependencies": {
+    "@tailwindcss/custom-forms": "^0.2.1",
     "prettier": "^1.19.1"
   },
   "license": "MIT",
